--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Sevda Avcılar, İlker Kurtulan, Furkan Ceylan, Ali Özgenç Alotech Bitirme Projesi Ekibi",
   "main": "index.js",
   "scripts": {
-    "start":"nodemon app.js",
+    "start": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -20,6 +20,7 @@
   "dependencies": {
     "cookie-parser": "^1.4.6",
     "express": "^4.17.2",
+    "fs": "^0.0.1-security",
     "jsonwebtoken": "^8.5.1"
   }
 }
