--- a/backend/package.json
+++ b/backend/package.json
@@ -15,5 +15,10 @@
     "express": "^4.17.2",
     "morgan": "^1.10.0",
     "mysql": "^2.18.1"
+  },
+  "devDependencies": {
+    "mocha": "^9.1.3",
+    "should": "^13.2.3",
+    "supertest": "^6.1.6"
   }
 }
