--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.17.2",
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^8.5.1",
+    "morgan": "^1.10.0",
     "mysql": "^2.18.1"
   }
 }
