--- a/client/package.json
+++ b/client/package.json
@@ -10,11 +10,12 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
-    "bootstrap": "^5.1.3",
     "axios": "^0.24.0",
+    "bootstrap": "^5.1.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
+    "react-toastify": "^8.1.0",
     "reactstrap": "^9.0.1",
     "web-vitals": "^2.1.2"
   },
