--- a/sso-server/SsoServer/package.json
+++ b/sso-server/SsoServer/package.json
@@ -14,6 +14,7 @@
     "cookie-parser": "^1.4.6",
     "express": "^4.17.2",
     "express-session": "^1.17.2",
+    "fs": "^0.0.1-security",
     "hashids": "^2.2.10",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
