--- a/sso-server/SsoServer/package.json
+++ b/sso-server/SsoServer/package.json
@@ -17,6 +17,7 @@
     "hashids": "^2.2.10",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
+    "mysql": "^2.18.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "uuid": "^8.3.2"
