--- a/sso-server/SsoServer/package.json
+++ b/sso-server/SsoServer/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "cookie-parser": "^1.4.6",
+    "crypto": "^1.0.1",
     "express": "^4.17.2",
     "express-session": "^1.17.2",
     "hashids": "^2.2.10",
