ADD cookie updating access

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/ozgencDev/ozgencDev-Mission-Impossible-sifa#readme",
   "dependencies": {
     "cookie-parser": "^1.4.6",
+    "cookies": "^0.8.0",
     "express": "^4.17.2",
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^8.5.1",
