--- a/sso-server/SsoServer/package.json
+++ b/sso-server/SsoServer/package.json
@@ -11,6 +11,7 @@
   "author": "Sevda Avcılar, İlker Kurtulan, Furkan Ceylan, Ali Özgenç",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.24.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
