--- a/sso-server/SsoServer/package.json
+++ b/sso-server/SsoServer/package.json
@@ -22,6 +22,8 @@
     "mysql": "^2.18.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "winston": "^3.3.3",
+    "winston-mysql": "^1.1.1"
   }
 }
