--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Minimal App",
-  "name": "React Material Minimal UI Kit",
+  "short_name": "Mission Impossible",
+  "name": "Mission Impossible",
   "icons": [
     {
       "src": "favicon/android-chrome-192x192.png",
