--- a/sso-server/SsoServer/package.json
+++ b/sso-server/SsoServer/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^17.0.2",
     "uuid": "^8.3.2",
     "winston": "^3.3.3",
-    "winston-mysql": "^1.1.1"
+    "winston-mongodb": "^5.0.7",
+    "winston-transport": "^4.4.1"
   }
 }
