--- a/sso-server/SsoServer/package.json
+++ b/sso-server/SsoServer/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
     "express-session": "^1.17.2",
+    "express-winston": "^4.2.0",
     "hashids": "^2.2.10",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
