--- a/sso-server/SsoServer/package.json
+++ b/sso-server/SsoServer/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^10.0.0",
+    "email-validator": "^2.0.4",
     "express": "^4.17.2",
     "express-session": "^1.17.2",
     "express-winston": "^4.2.0",
