--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
+    "react-toastify": "^8.1.0",
     "react-toastr": "^3.0.0"
   }
 }
