Edit package name

--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@minimal/material-kit-react",
-  "author": "minimals.cc",
+  "name": "Mission Impossible",
+  "author": "Sevda Avcılar, Ali Özgenç, İlker Kurtulan, Furkan Ceylan",
   "licence": "MIT",
   "version": "1.2.0",
   "private": false,
