--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Mission Impossible",
+  "name": "missionimpossible",
   "author": "Sevda Avcılar, Ali Özgenç, İlker Kurtulan, Furkan Ceylan",
   "licence": "MIT",
   "version": "1.2.0",
